<resources>
    <string name="app_name">CS_123_DREAM</string>
    <string name="emergency_mode">Emergency Mode</string>
    <string name="browse_mode">Browse Mode</string>
    <string name="police">Police Emergency</string>
    <string name="health">Health Emergency</string>
    <string name="vehicle">Vehicular Emergency</string>
    <string name="contacts">Contacts</string>
    <string name="phone_number">Contact number</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="default_text_phone">Phone Number</string>
    <string name="default_text_name">Enter Contact Name</string>
    <string name="default_text_desc">Enter Description</string>
    <string name="question_screen">What is the type of emergency that you have?</string>
    <string name="spec_question_screen">What specific emergency do you have?</string>
    <string name="browse_question_screen">What emergency do you want to browse?</string>
    <string name="browse_spec_question_screen">What specific emergency do you want to know more about?</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="add_button">Add</string>
    <string name="add_contact">Add Contact</string>
    <string name="cancel_button">Cancel</string>
    <string name="back">Back</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="notify_hotline">Notify Hotline</string>
    <string name="notfiy_contact">Notify Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_contact_information">Edit Contact</string>
    <string name="enter_phone_no">Contact Number (ex. 9171234567)</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="loc_perm">Needs Location Permission!</string>
    <string name="settings">Settings</string>
    <string name="phone_hint">Ex. +639171234567</string>
    <string name="lorem_name">Lorem Ipsum</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper morbi tincidunt ornare massa. Facilisi cras fermentum odio eu feugiat. Tincidunt tortor aliquam nulla facilisi cras.</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper morbi tincidunt ornare massa. Facilisi cras fermentum odio eu feugiat. Tincidunt tortor aliquam nulla facilisi cras. Tincidunt vitae semper quis lectus nulla. Tellus molestie nunc non blandit. Feugiat in fermentum posuere urna. Elit at imperdiet dui accumsan sit amet. Sed velit dignissim sodales ut eu sem integer. Elementum tempus egestas sed sed risus pretium quam.</string>
    <string name="emergencyE_demo_00"> Police Checkpoint </string>
    <string name="emergencyE_demo_01">
        1. Slow down your vehicle as you approach the checkpoint.
        \n\n2. Dim your headlights.
        \n\n3. Switch on the lights inside your car.
        \n\n4. Roll down windows. Do not step out of your vehicle.
        \n\n5. Make sure your doors are locked.
        \n\n6. Prepare to show driver’s license and car registration.
        \n\n7. Answer routine questions courteously.
        \n\n8. Only visual search is allowed. You are not obliged to open your glove compartment/any other items in the vehicle.
        \n\n9. Report any violations to the police hotline.
    </string>
    <string name="emergencyB_demo_02">
        1. <u>Slow down your vehicle as you approach the checkpoint.</u>
        \n\n\t\tOftentimes, police checkpoints are directed at single-rider motorcyclists. Police checkpoints are an effort by the PNP to prevent "riding-in-tandem". However, there are still times when police hail over cars. As you approach the checkpoint, make an assessment of the checkpoint.
        \n\n\t\tCheckpoints are well-lighted. Police authorities must be in proper uniform with a visible nameplate. Checkpoints are usually composed of an 8-man team, with a team leader who has the rank of Inspector (at minimum). There is a marked police vehicle present at the checkpoint. There is an official signage declaring the area as a checkpoint and the police department assigned to the checkpoint.
        \n\n2. <u>Dim your headlights, switch on the lights inside your car, roll down windows, make sure your doors are locked.</u>
        \n\n\t\tThe authorities at checkpoints are only permitted to do a visual search of your vehicle. They will look through using a flashlight. They are not permitted to open the car door.
        \n\n3. <u>You are not obliged to open your glove compartment/any other items in the vehicle.</u>
        \n\n\t\tYou may refuse to open and show the contents of your belongings like your bag. This kind of search requires them to have a probable cause.
        \n\n4. <u>Do not step out of your vehicle.</u>
        \n\n\t\tDo not submit to a body search.
        \n\n5. <u>Prepare to show driver’s license and car registration.</u>
        \n\n\t\tOfficers may require that you show them your official documents for inspection.
        \n\n6. <u>Answer routine questions courteously.</u>
        \n\n\t\tBe firm. Be aware of your rights and assert them. Have presence of mind at all times. Officers are only allowed to detain you for a brief amount of time.
        \n\n7. <u>Report any violations to the police hotline.</u>
        \n\n\t\tDial 722-0650 local 3453/3473 for the PNP complaint hotline.
    </string>
    <string name="police_emergency_title_00"> Police Checkpoint </string>
    <string name="police_emergency_E_00">
        1. Slow down your vehicle as you approach the checkpoint.
        \n\n2. Dim your headlights.
        \n\n3. Switch on the lights inside your car.
        \n\n4. Roll down windows. Do not step out of your vehicle.
        \n\n5. Make sure your doors are locked.
        \n\n6. Prepare to show driver’s license and car registration.
        \n\n7. Answer routine questions courteously.
        \n\n8. Only visual search is allowed. You are not obliged to open your glove compartment/any other items in the vehicle.
        \n\n9. Report any violations to the police hotline.
    </string>
    <string name="police_emergency_B_00">
        1. <u>Slow down your vehicle as you approach the checkpoint.</u>
        \n\n\t\tOftentimes, police checkpoints are directed at single-rider motorcyclists. Police checkpoints are an effort by the PNP to prevent "riding-in-tandem". However, there are still times when police hail over cars. As you approach the checkpoint, make an assessment of the checkpoint.
        \n\n\t\tCheckpoints are well-lighted. Police authorities must be in proper uniform with a visible nameplate. Checkpoints are usually composed of an 8-man team, with a team leader who has the rank of Inspector (at minimum). There is a marked police vehicle present at the checkpoint. There is an official signage declaring the area as a checkpoint and the police department assigned to the checkpoint.
        \n\n2. <u>Dim your headlights, switch on the lights inside your car, roll down windows, make sure your doors are locked.</u>
        \n\n\t\tThe authorities at checkpoints are only permitted to do a visual search of your vehicle. They will look through using a flashlight. They are not permitted to open the car door.
        \n\n3. <u>You are not obliged to open your glove compartment/any other items in the vehicle.</u>
        \n\n\t\tYou may refuse to open and show the contents of your belongings like your bag. This kind of search requires them to have a probable cause.
        \n\n4. <u>Do not step out of your vehicle.</u>
        \n\n\t\tDo not submit to a body search.
        \n\n5. <u>Prepare to show driver’s license and car registration.</u>
        \n\n\t\tOfficers may require that you show them your official documents for inspection.
        \n\n6. <u>Answer routine questions courteously.</u>
        \n\n\t\tBe firm. Be aware of your rights and assert them. Have presence of mind at all times. Officers are only allowed to detain you for a brief amount of time.
        \n\n7. <u>Report any violations to the police hotline.</u>
        \n\n\t\tDial 722-0650 local 3453/3473 for the PNP complaint hotline.
    </string>
    <string name="health_emergency_title_00"> Bleeding </string>
    <string name="health_emergency_E_00">
        1. Apply direct pressure on the cut or wound with a clean cloth, tissue, or piece of gauze until bleeding stops.
        \n\n2. Clean wound with soap and warm water. Rinse the soap out of the wound gently.
        \n\n3. Protect the wound with an antibiotic cream and cover it with a sterile bandage.
        \n\n4. If unsure of the situation, call for medical aid.
    </string>
    <string name="health_emergency_B_00">
        1. Stop Bleeding
        \n\n\t\tApply direct pressure on the cut or wound with a clean cloth, tissue, or piece of gauze until bleeding stops.
        \n\n\t\tIf blood soaks through the material, don’t remove it. Put more cloth or gauze on top of it and continue to apply pressure.
        \n\n\t\tIf the wound is on the arm or leg, raise limb above the heart, if possible, to help slow bleeding.
        \n\n\t\tWash your hands again after giving first aid and before cleaning and dressing the wound.
        \n\n\t\tDo not apply a tourniquet unless the bleeding is severe and not stopped with direct pressure.
        \n\n2. Clean Cut or Wound
        \n\n\t\tGently clean with soap and warm water. Try to rinse soap out of wound to prevent irritation.
        \n\n\t\tDon’t use hydrogen peroxide or iodine, which can damage tissue.
        \n\n3. Protect the Wound
        \n\n\t\tApply antibiotic cream to reduce risk of infection and cover with a sterile bandage.
        \n\n\t\tChange the bandage daily to keep the wound clean and dry.
        \n\n4. When to Call a Doctor
        \n\n\t\tThe wound is deep or the edges are jagged or gaping open.
        \n\n\t\tThe wound is on the person’s face.
        \n\n\t\tThe wound has dirt or debris that won’t come out.
        \n\n\t\tThe wound shows signs of infection, such as redness, tenderness, or a thick discharge, or if the person runs a fever.
        \n\n\t\tThe area around the wound feels numb.
        \n\n\t\tRed streaks form around the wound.
        \n\n\t\tThe wound is a result of an animal or human bite.
        \n\n\t\tThe person has a puncture wound or deep cut and hasn’t had a tetanus shot in the past five years, or anyone who hasn’t had a tetanus shot in the past 10 years.
    </string>
    <string name="health_emergency_title_01"> Breathing Difficulties </string>
    <string name="health_emergency_E_01">
        1. Call 911 or your local emergency number
        \n\n2. Check the person\'s airway, breathing, and pulse. If necessary, begin CPR.
        \n\n3. Loosen any tight clothing.
        \n\n4. Help the person use any prescribed medicine (an asthma inhaler or home oxygen).
        \n\n5. If there are open wounds in the neck or chest, they must be closed immediately, especially if air bubbles appear in the wound. Bandage such wounds at once.
    </string>
</resources>