<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowseMode">

    <TextView
        android:id="@+id/curMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/browse_mode"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BPolEmer"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/greenbutton"
        android:onClick="sendSpecEmerPolB"
        android:text="@string/police"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qText2" />

    <Button
        android:id="@+id/BHealEmer"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/greenbutton"
        android:onClick="sendSpecEmerHealB"
        android:text="@string/health"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BPolEmer" />

    <Button
        android:id="@+id/BVehEmer"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/greenbutton"
        android:onClick="sendSpecEmerVehB"
        android:text="@string/vehicle"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BHealEmer" />

    <Button
        android:id="@+id/browseSwitch"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/redbutton"
        android:text="@string/switch_mode"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addContact"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/greenbutton"
        android:text="@string/contacts"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BVehEmer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/qText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/browse_question_screen"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:fontFamily="@font/proxima_nova_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>