<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyModeMain">

    <Button
        android:id="@+id/EmerPolice"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/redbutton"
        android:onClick="sendSpecEmerPol"
        android:text="@string/police"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qText1" />

    <Button
        android:id="@+id/EmerHealth"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/redbutton"
        android:onClick="sendSpecEmerHeal"
        android:text="@string/health"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmerPolice" />

    <Button
        android:id="@+id/EmerVehicle"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/redbutton"
        android:onClick="sendSpecEmerVeh"
        android:text="@string/vehicle"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmerHealth" />

    <TextView
        android:id="@+id/curModeEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/emergency_mode"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SwitchMode"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/greenbutton"
        android:text="@string/switch_mode"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/qText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/question_screen"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:fontFamily="@font/proxima_nova_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>