<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/edit_contact_information"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_contact_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/first_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_contact_first_name"
        app:layout_constraintEnd_toStartOf="@+id/edit_contact_first_name"
        app:layout_constraintTop_toTopOf="@+id/edit_contact_first_name"
        tools:text="First name:" />

    <TextView
        android:id="@+id/edit_contact_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/last_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_contact_last_name"
        app:layout_constraintEnd_toStartOf="@+id/edit_contact_last_name"
        app:layout_constraintTop_toTopOf="@+id/edit_contact_last_name"
        app:layout_constraintVertical_bias="0.633"
        tools:text="Last name:" />

    <TextView
        android:id="@+id/edit_contact_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_contact_number"
        app:layout_constraintEnd_toStartOf="@+id/edit_contact_last_name"
        app:layout_constraintTop_toTopOf="@+id/edit_contact_number"
        tools:text="Contact number:" />

    <EditText
        android:id="@+id/edit_contact_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_text" />

    <EditText
        android:id="@+id/edit_contact_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_first_name" />

    <EditText
        android:id="@+id/edit_contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:maxLength="13"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_last_name" />

    <Button
        android:id="@+id/delete_contact_button"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/redderbutton"
        android:onClick="delete_contact_to_db"
        android:text="@string/delete_contact"
        android:textColor="@color/afwhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_contact_number" />

    <Button
        android:id="@+id/confirm_edit_contact_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/greenbutton"
        android:onClick="edit_contact_to_db"
        android:text="Done"
        android:textColor="@color/afwhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>